# fastropop

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  index.md  installation.md  quickstart.md  semi-analytic-model.md
docs/api/: cosmology.md  index.md  plotting.md  semi-analytic.md  spectra.md  units.md
docs/overrides/: main.html
examples/: README.md  basic_usage.py  population-spectra.ipynb
examples/notebooks/: README.md  SMBHB_pop_poisson.ipynb  semi-analytic.ipynb  skymaps.ipynb  test_sam.ipynb
src/fastropop/: __init__.py  constants.py  cosmology.py  healpix_backend.py  plots.py  semi_analytic.py  units.py
tests/: test_package.py
