[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fastropop"
version = "0.1.0"
description = "Fast JAX-first astrophysical population generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jesper Gjerlow", email = "placeholder@example.com" },
]
keywords = ["astrophysics", "jax", "gravitational-waves", "populations", "pta"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]
viz = [
  "jax-healpy>=0.6",
  "healpy>=1.17",
  "matplotlib>=3.9",
]
examples = [
  "jax-healpy>=0.6",
  "healpy>=1.17",
  "matplotlib>=3.9",
]

[project.urls]
Homepage = "https://github.com/jonaselgammal/fastropop"
Repository = "https://github.com/jonaselgammal/fastropop"
Issues = "https://github.com/jonaselgammal/fastropop/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fastropop"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["examples/notebooks/*.ipynb"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
